# nonebot-plugin-multigpt

./: README.md  pyproject.toml
nonebot_plugin_multigpt/: __init__.py  chat.py  config.py  model.py  openai_func.py  paper.py  ppt.py
