[project]
name = "nonebot-plugin-multigpt"
version = "1.3"
description = "nonebot插件-多模ai工具"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["PPT", "chat"]
authors = [
  {email = "3173707804@qq.com"},
  {name = "syagina"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
    "nonebot2>=2.2.0",
    "nonebot-adapter-onebot>=2.2.0",
    "nonebot",
    "nonebot-plugin-localstore",
    "typing-extensions>=4.5.0",
    "anyio>=3.6.2",
    "httpx>=0.24.0",
]

[project.urls]
repository = "https://github.com/syagina/nonebot-plugin-multigpt"
